tweak formatting of workshift rotation wall calendar.  further fixes #155

--- a/mess/media/css/print.css
+++ b/mess/media/css/print.css
@@ -30,4 +30,4 @@ div.pagebreakafter { page-break-after:always; }
     vertical-align:top; font-size:10pt; line-height:9pt; }
 .rotation-shift { min-height:50pt; border-bottom:1pt solid black; padding:5pt; }
 .rotation-shift hr { border:0pt; margin:1pt; }
-th.rotation-ideal { font-size:14pt; line-height:14pt; padding-bottom:20pt; }
+th.rotation-ideal { font-size:14pt; line-height:14pt; padding-bottom:17pt; }
